# vixl

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs
Examples/: CMakeLists.txt
Examples/01-HelloWorld/: CMakeLists.txt  main.cpp
Lib/ArgParse/: CMakeLists.txt
Lib/ArgParse/include/VX/ArgParse/: ArgParse.h
Lib/ArgParse/src/: ArgParse.cpp
Lib/Common/: CMakeLists.txt
Lib/Common/include/Common/: ByteBuffer.h  Error.h  Expected.h  ManagedBuffer.h  UnmanagedBuffer.h  Weakable.h
Lib/Common/include/VX/: ArrayUtils.h  ByteBuffer.h  Error.h  Expected.h  Noncopyable.h  Overloaded.h  Try.h  Weakable.h
Lib/Common/src/: Error.cpp
Lib/Core/: CMakeLists.txt
Lib/Core/cmake/: resource_utils.cmake  shader_utils.cmake
Lib/Core/include/Core/: Application.h  Assert.h  AssetBundle.h  Async.h  Bitmap.h  CallbackTask.h  Camera.h  Closable.h  Colors.h  DemoRenderSystem.h  Dispatcher.h  EventLoop.h  EventScope.h  FileReadTask.h  Graphics.h  Handle.h  Input.h  Logger.h  Material.h  Math.h  MetaSystem.h  NativeWindow.h  PackedAsset.h  Painter.h  Platform.h  RenderBuffer.h  RenderBuiltins.h  RenderCamera.h  RenderCommand.h  RenderContext.h  RenderLayer.h  RenderPass.h  RenderPrimitives.h  RenderService.h  RenderStack.h  RenderSystem.h  RenderTarget.h  Renderer.h  ResourceLocator.h  ResourceManager.h  (+14 more)
Lib/Core/include/Core/Graphics/: Generic.h  Metal.h
Lib/Core/include/VX/Core/: Application.h  Assert.h  AssetBundle.h  Async.h  Closable.h  Color.h  Colors.h  DemoRenderSystem.h  Event.h  Graphics.h  Handle.h  Init.h  Input.h  Logger.h  Material.h  Math.h  MetaSystem.h  NativeWindow.h  PackedAsset.h  Painter.h  Platform.h  RenderBuffer.h  RenderBuiltins.h  RenderCommand.h  RenderContext.h  RenderLayer.h  RenderPass.h  RenderStack.h  RenderSystem.h  RenderTarget.h  Renderer.h  ResourceLocator.h  ResourceManager.h  Scene.h  SceneCamera.h  SceneContext.h  SceneManager.h  SceneRenderDelegate.h  SceneRenderer.h  Shader.h  (+7 more)
Lib/Core/include/VX/Core/Component/: SpriteComponent.h  TagComponent.h  TransformComponent.h
Lib/Core/include/VX/Core/Graphics/: Generic.h  Graphics.h  Metal.h
Lib/Core/include/VX/Core/Graphics/API/: Generic.h  Metal.h
Lib/Core/include/VX/Core/Platform/: Platform.h  Platform_Extern.h
Lib/Core/include/VX/Core/Platform/API/: Generic.h  OSX.h
Lib/Core/include/VX/Core/System/: DemoRenderingSystem.h  SpriteRenderingSystem.h
Lib/Core/include_private/VX/Core/: Assert.h  Logger.h
Lib/Core/res/: manifest.json
Lib/Core/res/shaders/sprite/: fragment.sc  varying.def.sc  vertex.sc
Lib/Core/res/shaders/uvmap/: varying.def.sc  vertex.sc
Lib/Core/res/shaders/uvtex/: varying.def.sc  vertex.sc
Lib/Core/src/: Application.cpp  Assert.cpp  Bitmap.cpp  Closable.cpp  DemoRenderSystem.cpp  Dispatcher.cpp  FileReadTask.cpp  Init.cpp  Input.cpp  Logger.cpp  Material.cpp  NativeWindow.cpp  RenderBuffer.cpp  RenderBuiltins.cpp  RenderCamera.cpp  RenderContext.cpp  RenderPass.cpp  RenderPrimitives.cpp  RenderService.cpp  RenderStack.cpp  RenderSystem.cpp  RenderTarget.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  SceneRenderer.cpp  Shader.cpp  Texture.cpp  TimerLoopTask.cpp  TimerTask.cpp  Window.cpp
Lib/Core/src/System/: DemoRenderingSystem.cpp  SpriteRenderingSystem.cpp
Lib/Entry/: CMakeLists.txt
Lib/Entry/cmake/: vixl_application.cmake
Lib/Entry/include/VX/Entry/: Main.h
Lib/Entry/res/platform/macOS/: MoltenVK_icd.json
Lib/Entry/src/: Inlines.cpp  Main.cpp
Lib/Graphics/: CMakeLists.txt
Lib/Graphics/include/VX/Graphics/: APIObject.h  CommandBuffer.h  CommandRecorder.h  Framebuffer.h  Graphics.h  GraphicsPipeline.h  Graphics_MacOS.h  Init_MacOS.h  Instance.h  Instance_Private.h  Logger.h  Platform.h  RenderPass.h  RenderPipeline.h  RenderRequest.h  RenderTarget.h  Swapchain.h  Synchronization.h  Ticket.h  Token.h
Lib/Graphics/include/VX/Graphics/Private/: Assert.h  CommandBufferImpl.h  CommandRecorderImpl.h  Device.h  ExampleFragmentShader.h  ExampleVertexShader.h  FramebufferImpl.h  GraphicsPipelineImpl.h  Init.h  InstanceData.h  InstanceImpl.h  Logger.h  PlatformDelegate.h  Queue.h  QueueSupport.h  RenderPassImpl.h  RenderPipelineImpl.h  SurfaceData.h  SwapchainImpl.h  SwapchainSupport.h  Vulkan.h  Wrappers.h
Lib/Graphics/include_private/VX/Graphics/: Assert.h  ExampleFragmentShader.h  ExampleVertexShader.h  GraphicsContextImpl.h  GraphicsPipeline.h  GraphicsProgram.h  Init.h  Instance.h  Logger.h  Memory.h  PlatformDelegate.h  QueueSupport.h  RenderContext.h  RenderPass.h  RenderTarget.h  ResourceManager.h  Swapchain.h
Lib/Graphics/src/: CommandBuffer.cpp  CommandRecorder.cpp  Framebuffer.cpp  Graphics.cpp  GraphicsContextImpl.cpp  GraphicsPipeline.cpp  Graphics_MacOS.cpp  Init.cpp  Init_MacOS.cpp  Instance.cpp  QueueSupport.cpp  RenderPass.cpp  RenderPipeline.cpp  Swapchain.cpp
Lib/Platform/: CMakeLists.txt
Lib/Platform/include/VX/Platform/: NativeWindow.h  Platform.h  ResourceLocator.h
Lib/Platform/include/VX/Platform/Abstraction/: FileSystem.h  GraphicsInitializer.h  WindowFactory.h
Lib/Platform/include/VX/Platform/Private/: MacOSBundleFileSystem.h  MacOSGraphicsInitializer.h  SDLWindowFactory.h
Lib/Platform/src/: NativeWindow.cpp  Platform.cpp
Tools/VulkanTest/: CMakeLists.txt  main.cpp
VixlApp/: CMakeLists.txt
VixlApp/include/App/: Assert.h  Bitmap.h  CallbackTask.h  Camera.h  Colors.h  Dispatcher.h  EventLoop.h  EventScope.h  GUILayer.h  GUIState.h  Logger.h  Math.h  Painter.h  RenderLayer.h  RenderStack.h  Size.h  Task.h  TimerLoopTask.h  TimerTask.h  UnmanagedBuffer.h  Workspace.h  WorkspaceLayer.h  WorkspaceRegistry.h  WorkspaceRenderer.h  WorkspaceViewport.h  WorkspaceWindow.h
VixlApp/include/Common/: Error.h
VixlApp/include/Glad/: gl.h
VixlApp/src/: Assert.cpp  Bitmap.cpp  Dispatcher.cpp  GUILayer.cpp  GUIState.cpp  Logger.cpp  RenderStack.cpp  TimerLoopTask.cpp  TimerTask.cpp  Workspace.cpp  WorkspaceLayer.cpp  WorkspaceRegistry.cpp  WorkspaceRenderer.cpp  main.cpp
VixlApp/src/Common/: Error.cpp
VixlCommon/: CMakeLists.txt
VixlCommon/include/Common/: Copyable.h  Error.h
(+22 files in other folders)
