[package]
name = "vixl"
version = "0.1.0"
authors = ["Ryan Webber <wbbr.ryan@gmail.com>"]
edition = "2018"

[dependencies]
gfx-hal = "~0.6.0"
shaderc = "~0.7.2"
winit   = "~0.20.0"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.6.2"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.6.3"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.6.1"

